# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-10-13 Michael Truog   <mjtruog at protonmail dot com>

    * Fix dialyzer underspecs errors
    * Improve cloudi_string:compare_constant functions

2020-10-12 Michael Truog   <mjtruog at protonmail dot com>

    * Fix dialyzer underspecs errors
    * Simplify cloudi_service_funnel response processing
    * Improve cloudi_string:compare_constant functions
    * Update cgroups
    * Update cpg
    * Update keys1value
    * Update pqueue
    * Update quickrand
    * Update reltool_util
    * Update trie
    * Update uuid

2020-10-10 Michael Truog   <mjtruog at protonmail dot com>

    * Add more specific cloudi_service_api types for string status values
    * Fix dialyzer unmatched_returns errors in internal services
    * Update nodefinder
    * Update cpg
    * Update supool
    * Update varpool

2020-10-09 Michael Truog   <mjtruog at protonmail dot com>

    * Improve CloudI Service API function logging_status by having
      file_sync_fail_types and file_write_fail_types lists
      in order of occurrence
    * Fix dialyzer unmatched_returns errors in cloudi_core

2020-10-08 Michael Truog   <mjtruog at protonmail dot com>

    * Add CloudI Service API functions logging_status and
      logging_status_reset for tracking file output details

2020-10-07 Michael Truog   <mjtruog at protonmail dot com>

    * Delay shutdown termination in the CloudI logger
      based on the message queue size to ensure pending data gets logged
    * Delay CloudI/GEPD Erlang port process shutdown termination
      to accumulate stdout/stderr service termination output
    * Require all CloudI Erlang port OS processes to provide
      a terminate_now function (cloudi_os_spawn, cloudi_os_command)
    * Add CloudI/GEPD Erlang port OS process orphaned detection
      (used if the Erlang VM crashed in a weird way)

2020-10-06 Michael Truog   <mjtruog at protonmail dot com>
