@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2020-10-14 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Fix dialyzer error_handling errors
+
 2020-10-13 Michael Truog   <mjtruog at protonmail dot com>
 
     * Fix dialyzer underspecs errors
